# mosaic

./: .gitignore  config.py  mosaic.py  pyproject.toml  requirements.txt  ruff.toml  tiles.py  utils.py
mosaics/: config.py  main.py  mosaic.py  tile.py  utils.py
